updated media queries

--- a/Ed Harris Golf/Private_Lessons.html
+++ b/Ed Harris Golf/Private_Lessons.html
@@ -8,7 +8,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="privateLessons_content_wrap">
+	<div id="privateLessons_content_wrap" class="clearfix">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
@@ -21,8 +21,8 @@
 				<img src="img/pga.png">
 			</div>
 		</header>
-		<nav class="clearfix">
-			<ul>
+		<nav id="desktop" class="clearfix">
+			<ul class="clearfix">
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Ed_Harris_PGA.html"><li>Home</li></a>
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Private_Lessons.html"><li>Lessons</li></a>
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lessons.html"><li>Playing Lessons</li></a>
@@ -32,9 +32,29 @@
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
 			</ul>
 		</nav>
+		<div id="media" class="clearfix">
+			<div class="media_menu">
+				<img class="open" src="img/hamburger.png">
+				<img class="close" src="img/close.png">
+				<p>Menu</p>
+			</div>
+			<div class="media_nav">
+				<ul class="clearfix">
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Ed_Harris_PGA.html"><li>Home</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Private_Lessons.html"><li>Lessons</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lessons.html"><li>Playing Lessons</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Golf_Schools.html"><li>Golf Schools</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lesson_reservations.html"><li>Reservations</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/hours.html"><li>Hours</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
+				</ul>
+			</div>
+		</div>
+
 		<div class="content_heading">
 			<h1>Private Lessons</h1>
 		</div>
+
 		<div class="privateLessons_wrap">
 			<div class="top_content">
 				<p>
@@ -93,6 +113,8 @@
 		<a href="https://www.facebook.com/edharrisschoolofgolf" target="_blank"><img class="socMed" src="img/facebook.png"></a>
 		<a href="https://www.yelp.com/biz/ed-harris-school-of-golf-national-city" target="_blank"><img class="socMed" src="img/yelp.png"></a>
 	</footer>
-	
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/edHarris.js"></script>
 </body>
 </html>
