--- a/Ed Harris Golf/hours.html
+++ b/Ed Harris Golf/hours.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ed Harris Golf Instruction</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/edHarris.css">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
@@ -20,8 +21,8 @@
 				<img src="img/pga.png">
 			</div>
 		</header>
-		<nav class="clearfix">
-			<ul>
+		<nav id="desktop" class="clearfix">
+			<ul class="clearfix">
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Ed_Harris_PGA.html"><li>Home</li></a>
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Private_Lessons.html"><li>Lessons</li></a>
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lessons.html"><li>Playing Lessons</li></a>
@@ -31,6 +32,24 @@
 				<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
 			</ul>
 		</nav>
+		<div id="media" class="clearfix">
+			<div class="media_menu">
+				<img class="open" src="img/hamburger.png">
+				<img class="close" src="img/close.png">
+				<p>Menu</p>
+			</div>
+			<div class="media_nav">
+				<ul class="clearfix">
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Ed_Harris_PGA.html"><li>Home</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Private_Lessons.html"><li>Lessons</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lessons.html"><li>Playing Lessons</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Golf_Schools.html"><li>Golf Schools</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Lesson_reservations.html"><li>Reservations</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/hours.html"><li>Hours</li></a>
+					<a href="file:///Users/bsidedrums/Desktop/raymond/projects/website-stuff/Ed%20Harris%20Golf/Contact.html"><li>Contact</li></a>
+				</ul>
+			</div>
+		</div>
 		<div>
 			<h1>Hours of Instruction</h1>
 		</div>
@@ -64,6 +83,9 @@
 		<a href="https://www.facebook.com/edharrisschoolofgolf" target="_blank"><img class="socMed" src="img/facebook.png"></a>
 		<a href="https://www.yelp.com/biz/ed-harris-school-of-golf-national-city" target="_blank"><img class="socMed" src="img/yelp.png"></a>
 	</footer>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/edHarris.js"></script>
 	
 </body>
 </html>
