added new mmtc.html/css

--- a/Ed Harris Golf/Private_Lessons.html
+++ b/Ed Harris Golf/Private_Lessons.html
@@ -8,7 +8,7 @@
 
 </head>
 <body class="clearfix">
-	<div id="privateLessons_content_wrap" class="clearfix">
+	<div id="privateLessons_content_wrap">
 		<header class="clearfix">
 			<div class="header_img">
 				<img src="img/Ed_Harris_SoG.png">
