added multiple banners for scrolling

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
  		<meta name="viewport" content="width=device-width">
    	 	<link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,700" rel="stylesheet">
+   	 	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     	<link rel="stylesheet" href="css/MMTC.css">
 		<title>Muscle Mechanis Training Center</title>
 		<script type="text/javascript" src="js/MMTC.js"></script>
@@ -26,7 +27,21 @@
       	</div>
 
       	<div class="banner">
-      		<h1>Muscle Mechanics Training Center<span>Ceres, CA</span></h1>
+      		<div class="banner_words">
+      			<h1>Muscle Mechanics <br> Training Center<span>Ceres, CA</span></h1>
+      		</div>
+      	</div>
+
+      	<div class="banner2">
+      		<div class="banner2_words">
+      			<h1>Come & Get <br> In the <br> Best Shape <br> of your Life!<span></span></h1>
+      		</div>
+      	</div>
+
+      	<div class="banner3">
+      		<div class="banner3_words">
+      			<h1>Come <br> check us out <br> today!<span></span></h1>
+      		</div>
       	</div>
 		
 		<section id="section_one">
@@ -49,19 +64,21 @@
 		<section id="section_two" class="clearfix">
 			<div class="section_wrap">
 				<div class="mmInfo">
-					<h2>About Muscle Mechanics Training Center</h2>
+					<h2>About Muscle Mechanics <br> Training Center</h2>
 					<p>
 						Lorem ipsum dolor sit amet, dicat libris vituperata pri ne. Sit ad idque mentitum comprehensam, ex ignota vituperata concludaturque vis, prima nonumes interpretaris ei has. Essent gloriatur vulputate eam eu, ad mel eruditi propriae delicatissimi. No soluta appareat signiferumque mel, ut dicat veniam dictas sit. Te mel habemus scripserit, sit in possit dissentiet, vis denique nominati eu. Ad discere detraxit consulatu nam, eu quo alia prima denique, ferri assum legere an mea.
 
 						Ad sed agam vidit, ad viris suscipit mei. Ei nullam quaestio consequuntur sed, quo nihil commodo tacimates ut. Mea stet pericula te, quas omnes latine te est. Ius te paulo verterem, et usu veri harum sapientem. Dicat invenire explicari per eu, id ius timeam virtute, at sed vide laudem patrioque. Cum audiam periculis dissentiunt ad.
 					</p>
 				</div>
-				<div class="mmInfo_imgs clearfix">
-					<img class="img1" src="img/original_OGs.png">
-					<img class="img2" src="img/mmtc_ogs.png">
-					<img class="img3" src="img/drewOutdoor.png">
-					<img class="img4" src="img/mmtc_wod.png">
-					<img class="img5" src="img/drewFam.png">
+				<div class="Info_slides clearfix">
+					<ul>
+						<li><img src="img/original_OGs.png"></li>
+						<li><img src="img/mmtc_ogs.png"></li>
+						<li><img src="img/drewOutdoor.png"></li>
+						<li><img src="img/mmtc_wod.png"></li>
+						<li><img src="img/drewFam.png"></li>
+					</ul>	
 				</div>
 			</div>
 		</section>
