added images and changed css styles on banner

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -26,22 +26,45 @@
 	        </header>
       	</div>
 
-      	<div class="banner">
-      		<div class="banner_words">
-      			<h1>Muscle Mechanics <br> Training Center<span>Ceres, CA</span></h1>
-      		</div>
-      	</div>
+      	<div id="banner_handler">
+	      	<div class="banner show">
+	      		<div class="banner_words">
+	      			<h1>Muscle Mechanics <br> Training Center<span>Ceres, CA</span></h1>
+	      			<div class="left_btn"></div>
+	      			<div class="right_btn"></div>
+	      			<div class="dots">
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      			</div>
+	      		</div>
+	      	</div>
 
-      	<div class="banner2">
-      		<div class="banner2_words">
-      			<h1>Come & Get <br> In the <br> Best Shape <br> of your Life!<span></span></h1>
-      		</div>
-      	</div>
+	      	<div class="banner2 show">
+	      		<div class="banner2_words">
+	      			<h1>Get <br> In the <br> Best Shape <br> of your Life!<span></span></h1>
+	      			<div class="right_btn"></div>
+	      			<div class="left_btn"></div>
+	      			<div class="dots">
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      			</div>
+	      		</div>
+	      	</div>
 
-      	<div class="banner3">
-      		<div class="banner3_words">
-      			<h1>Come <br> check us out <br> today!<span></span></h1>
-      		</div>
+	      	<div class="banner3 show">
+	      		<div class="banner3_words">
+	      			<h1>Come <br> check us out <br> today!<span></span></h1>
+	      			<div class="left_btn"></div>
+	      			<div class="right_btn"></div>
+	      			<div class="dots">
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      				<span class="dot"></span>
+	      			</div>
+	      		</div>
+	      	</div>
       	</div>
 		
 		<section id="section_one">
@@ -72,13 +95,22 @@
 					</p>
 				</div>
 				<div class="Info_slides clearfix">
-					<ul>
-						<li><img src="img/original_OGs.png"></li>
-						<li><img src="img/mmtc_ogs.png"></li>
-						<li><img src="img/drewOutdoor.png"></li>
-						<li><img src="img/mmtc_wod.png"></li>
-						<li><img src="img/drewFam.png"></li>
-					</ul>	
+					<div class="info_imgs clearfix">
+						<div class="imgs"><img src="img/original_OGs.png"></div>
+						<div class="imgs"><img src="img/mmtc_ogs.png"></div>
+						<div class="imgs"><img src="img/daughter.png"></div>
+						<div class="imgs"><img src="img/kettleRings.png"></div>
+						<div class="imgs"><img src="img/box_brothers.png"></div>
+						<div class="imgs"><img src="img/drewOutdoor.png"></div>
+						<div class="imgs"><img src="img/drewFam.png"></div>
+						<div class="imgs"><img src="img/the_crew.png"></div>
+						<div class="imgs"><img src="img/graffiti.png"></div>
+						<div class="imgs"><img src="img/jumprope.png"></div>
+						<div class="imgs"><img src="img/rings.png"></div>
+						<div class="imgs"><img src="img/garage.png"></div>
+						<div class="imgs"><img src="img/transform.png"></div>
+						<div class="imgs"><img src="img/mmtc_wod.png"></div>
+					</div>	
 				</div>
 			</div>
 		</section>
@@ -100,6 +132,7 @@
 			</h3>
 		</footer>
 	</div>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/mmtc.js" type="text/javascript"></script>
 </body>
 </html>
