added plugin for banner transition

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -6,8 +6,9 @@
    	 	<link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,700" rel="stylesheet">
    	 	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     	<link rel="stylesheet" href="css/MMTC.css">
-		<title>Muscle Mechanis Training Center</title>
-		<script type="text/javascript" src="js/MMTC.js"></script>
+		<script src="js/MMTC.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<title>Muscle Mechanics Training Center</title>
 	</head>
 	<body>
 		<div id="container">
@@ -94,6 +95,19 @@
 						Ad sed agam vidit, ad viris suscipit mei. Ei nullam quaestio consequuntur sed, quo nihil commodo tacimates ut. Mea stet pericula te, quas omnes latine te est. Ius te paulo verterem, et usu veri harum sapientem. Dicat invenire explicari per eu, id ius timeam virtute, at sed vide laudem patrioque. Cum audiam periculis dissentiunt ad.
 					</p>
 				</div>
+				<div class="mediaPlayer">
+					<h1>Come and see what we are cooking up</h1>
+    
+    					<div class="wrapper">
+      
+						    <video width="852" height="480" controls>
+						    	<source src="https://www.youtube.com/watch?v=kwZa5J9dBWE" type="video/mp4">
+						        <source src="https://www.youtube.com/watch?v=kwZa5J9dBWE" type="video/ogg">
+						        <track label="English" kind="subtitles" srclang="en" src="bridge-captions.vtt" default>
+						    </video>
+
+						</div>
+				</div>
 				<div class="Info_slides clearfix">
 					<div class="info_imgs clearfix">
 						<div class="imgs"><img src="img/original_OGs.png"></div>
@@ -132,7 +146,7 @@
 			</h3>
 		</footer>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/mmtc.js" type="text/javascript"></script>
+	
+	
 </body>
 </html>
