modified images and updated css

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -13,14 +13,12 @@
 		<div id="container">
 			<div class="nav-wrapper">
 	       	 <header class="header">
-	        	<img src="img/kettleBell.png">
+	        	<img src="img/whiteKettle.png">
 	         	<nav>
 	          		<ul>
 	           	   		<li><a href="#">Strength Training</a></li>
 	            		<li><a href="#">Nutrition</a></li>
 	              		<li><a href="#">Train with a Purpose</a></li>
-	              		<li><a href="#"></a></li>
-	              		<li><a href="#"></a></li>
 	            	</ul>
 	          	</nav>
 	        </header>
@@ -64,6 +62,25 @@
 	      		</div>
 	      	</div>
       	</div>
+      	<div id="options" class="clearfix">
+      		<div class="nav_options fade">
+      			<h3>
+      				Strength Training
+      			</h3>
+      		</div>
+
+      		<div class="nav_options fade">
+      			<h3>
+      				Nutrition
+      			</h3>
+      		</div>
+
+      		<div class="nav_options fade">
+      			<h3>
+      				Train with a Purpose
+      			</h3>
+      		</div>
+      	</div>
 		
 		<section id="section_one">
 			<div class="section_wrap">
@@ -99,30 +116,32 @@
 						Ad sed agam vidit, ad viris suscipit mei. Ei nullam quaestio consequuntur sed, quo nihil commodo tacimates ut. Mea stet pericula te, quas omnes latine te est. Ius te paulo verterem, et usu veri harum sapientem. Dicat invenire explicari per eu, id ius timeam virtute, at sed vide laudem patrioque. Cum audiam periculis dissentiunt ad.
 					</p>
 				</div>
-				
+      		</div>
+
 				<div class="Info_slides clearfix">
 					<div class="info_imgs clearfix">
-						<div class="imgs"><img src="img/original_OGs.png"></div>
-						<div class="imgs"><img src="img/mmtc_ogs.png"></div>
-						<div class="imgs"><img src="img/daughter.png"></div>
-						<div class="imgs"><img src="img/kettleRings.png"></div>
-						<div class="imgs"><img src="img/box_brothers.png"></div>
-						<div class="imgs"><img src="img/drewOutdoor.png"></div>
-						<div class="imgs"><img src="img/drewFam.png"></div>
-						<div class="imgs"><img src="img/the_crew.png"></div>
-						<div class="imgs"><img src="img/graffiti.png"></div>
-						<div class="imgs"><img src="img/jumprope.png"></div>
-						<div class="imgs"><img src="img/rings.png"></div>
-						<div class="imgs"><img src="img/garage.png"></div>
-						<div class="imgs"><img src="img/transform.png"></div>
-						<div class="imgs"><img src="img/mmtc_wod.png"></div>
+						<img src="img/mmtc_ogs.png">
+						<img src="img/kettleRings.png">
+						<img src="img/caffeine_kilos.png">
+						<img src="img/drewFam.png">
+						<img src="img/graffiti.png">
+						<img src="img/original_OGs.png">
+						<img src="img/the_crew.png">
+						<img src="img/jumprope.png">
+						<img src="img/rings.png">
+						<img src="img/garage.png">
+						<img src="img/transform.png">
+						<img src="img/box_brothers.png">
+						<img src="img/daughter.png">
 					</div>	
 				</div>
-			</div>
 		</section>
 		<section id="section_three">
 			<div class="location">
 				<div class="form">
+					<h2>
+						Enter your info & come join us!
+					</h2>
 					<form>
 						<input type="text" name="name" placeholder="First Name">
 						<input type="text" name="name" placeholder="Last Name">
@@ -140,15 +159,33 @@
 					"I love working with Dru!  He knows what works for me and pushes me every day."
 				</p>
 			</div>
+			<div class="test">
+				<h2>
+					Jennifer - Ceres, CA
+				</h2>
+				<img src="img/test2.jpg">
+				<p>
+					"I found my motivation working alongside Dru"
+				</p>
+			</div>
+			<div class="test">
+				<h2>
+					Marcus - Turlock, CA
+				</h2>
+				<img src="img/test3.jpg">
+				<p>
+					"Dru makes working out fun again!"
+				</p>
+			</div>
 		</section>
 		<footer>
 			<h3>
 				All Rights Reserved.  MMTC, Ceres, CA
 			</h3>
 			<div class="social_media">
-				<img src="img/blk_ig.png">
+				<a href="https://www.instagram.com/d_areyou/"><img src="img/blk_ig.png"></a>
 				<img src="img/blk_twitter.png">
-				<img src="img/blk_fb.png">
+				<a href="https://www.facebook.com/pages/Muscle-Mechanics-Training-Center/1542834612656625"><img src="img/blk_fb.png"></a>
 			</div>
 			<h3>
 				Address: Muscle Mechanics Training Center<br>
