added a transition fuction for .test

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -27,7 +27,6 @@
       	<div id="banner_handler">
 	      	<div class="banner show">
 	      		<div class="banner_words">
-	      			<div class="top_btn"></div>
 	      			<h1>Muscle Mechanics <br> Training Center<span>Ceres, CA</span></h1>
 	      			<!-- <div class="dots">
 	      				<span class="dot"></span>
@@ -37,22 +36,19 @@
 	      		</div>
 	      	</div>
 
-	      	<!-- <div class="banner2 show">
+	      	<div class="banner2 show">
 	      		<div class="banner2_words">
-	      			<div class="right_btn"></div>
 	      			<h1>Get <br> In the <br> Best Shape <br> of your Life!<span></span></h1>
-	      			<div class="left_btn"></div>
-	      			<div class="dots">
+	      			<!-- <div class="dots">
 	      				<span class="dot"></span>
 	      				<span class="dot"></span>
 	      				<span class="dot"></span>
-	      			</div>
+	      			</div> -->
 	      		</div>
-	      	</div> -->
+	      	</div>
 
 	      	<div class="banner3 show">
 	      		<div class="banner3_words">
-	      			<div class="top_btn"></div>
 	      			<h1>Come <br> check us out <br> today!<span></span></h1>
 	      			<!-- <div class="dots">
 	      				<span class="dot"></span>
@@ -150,32 +146,34 @@
 					</form>
 				</div>
 			</div>
-			<div class="test">
-				<h2>
-					Heather - Modesto, CA
-				</h2>
-				<img src="img/testimonial.jpg">
-				<p>
-					"I love working with Dru!  He knows what works for me and pushes me every day."
-				</p>
-			</div>
-			<div class="test">
-				<h2>
-					Jennifer - Ceres, CA
-				</h2>
-				<img src="img/test2.jpg">
-				<p>
-					"I found my motivation working alongside Dru"
-				</p>
-			</div>
-			<div class="test">
-				<h2>
-					Marcus - Turlock, CA
-				</h2>
-				<img src="img/test3.jpg">
-				<p>
-					"Dru makes working out fun again!"
-				</p>
+			<div class="testimonial_wrap">
+				<div class="test">
+					<h2>
+						Heather - Modesto, CA
+					</h2>
+					<img src="img/testimonial.jpg">
+					<p>
+						"I love working with Dru!  He knows what works for me and pushes me every day."
+					</p>
+				</div>
+				<div class="test">
+					<h2>
+						Jennifer - Ceres, CA
+					</h2>
+					<img src="img/test2.jpg">
+					<p>
+						"I found my motivation working alongside Dru"
+					</p>
+				</div>
+				<div class="test">
+					<h2>
+						Marcus - Turlock, CA
+					</h2>
+					<img src="img/test3.jpg">
+					<p>
+						"Dru makes working out fun again!"
+					</p>
+				</div>
 			</div>
 		</section>
 		<footer>
