--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -17,7 +17,7 @@
 	         	<nav>
 	          		<ul>
 	           	   		<li><a href="#">Strength Training</a></li>
-	            		<li><a href="#">Nutrition</a></li>
+	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Nutrition</a></li>
 	              		<li><a href="#">Train with a Purpose</a></li>
 	            	</ul>
 	          	</nav>
@@ -28,54 +28,45 @@
 	      	<div class="banner show">
 	      		<div class="banner_words">
 	      			<h1>Muscle Mechanics <br> Training Center<span>Ceres, CA</span></h1>
-	      			<!-- <div class="dots">
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      			</div> -->
 	      		</div>
 	      	</div>
 
-	      	<div class="banner2 show">
+	      	<!-- <div class="banner2 show">
 	      		<div class="banner2_words">
 	      			<h1>Get <br> In the <br> Best Shape <br> of your Life!<span></span></h1>
-	      			<!-- <div class="dots">
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      			</div> -->
 	      		</div>
 	      	</div>
 
 	      	<div class="banner3 show">
 	      		<div class="banner3_words">
 	      			<h1>Come <br> check us out <br> today!<span></span></h1>
-	      			<!-- <div class="dots">
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      				<span class="dot"></span>
-	      			</div> -->
 	      		</div>
-	      	</div>
+	      	</div> -->
       	</div>
       	<div id="options" class="clearfix">
-      		<div class="nav_options fade">
+
+      		<div class="nav_options strength">
       			<h3>
       				Strength Training
       			</h3>
       		</div>
 
-      		<div class="nav_options fade">
+      		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">
+
+      		<div class="nav_options food">
       			<h3>
       				Nutrition
       			</h3>
       		</div>
 
-      		<div class="nav_options fade">
+      		</a>
+
+      		<div class="nav_options train">
       			<h3>
       				Train with a Purpose
       			</h3>
       		</div>
+
       	</div>
 		
 		<section id="section_one">
