--- a/Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width">
  	<link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,700" rel="stylesheet">
  	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
- 	<link rel="stylesheet" src="progressively.min.css">
 	<link rel="stylesheet" href="css/nutrition.css">
 	<title>Muscle Mechanics Nutrition</title>
 </head>
@@ -17,7 +16,7 @@
 	         	<nav>
 	          		<ul>
 	           	   		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_TC.html">Home</a></li>
-	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_ST.html">Strength Training</a></li>
+	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">Strength Training</a></li>
 	              		<li><a href="#">Train with a Purpose</a></li>
 	            	</ul>
 	          	</nav>
@@ -62,11 +61,13 @@
       		</div>
       		</a>
 
+      		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">
       		<div class="nav_options strength">
       			<h3>
       				Strength Training
       			</h3>
       		</div>
+      		</a>
 
       		<div class="nav_options train">
       			<h3>
