--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -16,7 +16,7 @@
 	        	<img src="img/whiteKettle.png">
 	         	<nav>
 	          		<ul>
-	           	   		<li><a href="#">Strength Training</a></li>
+	           	   		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">Strength Training</a></li>
 	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Nutrition</a></li>
 	              		<li><a href="#">Train with a Purpose</a></li>
 	            	</ul>
@@ -44,12 +44,13 @@
 	      	</div> -->
       	</div>
       	<div id="options" class="clearfix">
-
+      		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">
       		<div class="nav_options strength">
       			<h3>
       				Strength Training
       			</h3>
       		</div>
+      		</a>
 
       		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">
 
@@ -103,7 +104,7 @@
 						Ad sed agam vidit, ad viris suscipit mei. Ei nullam quaestio consequuntur sed, quo nihil commodo tacimates ut. Mea stet pericula te, quas omnes latine te est. Ius te paulo verterem, et usu veri harum sapientem. Dicat invenire explicari per eu, id ius timeam virtute, at sed vide laudem patrioque. Cum audiam periculis dissentiunt ad.
 					</p>
 				</div>
-      		</div>
+      		
 
 				<div class="Info_slides clearfix">
 					<div class="info_imgs clearfix">
@@ -122,6 +123,7 @@
 						<img src="img/daughter.png">
 					</div>	
 				</div>
+			</div>
 		</section>
 		<section id="section_three">
 			<div class="location">
