added media player in purpose.html and cleaned up js

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html
@@ -17,7 +17,7 @@
 	          		<ul>
 	           	   		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_TC.html">Home</a></li>
 	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Nutrition</a></li>
-	              		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Strength Training</a></li>
+	              		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">Strength Training</a></li>
 	            	</ul>
 	          	</nav>
 	        </header>
@@ -69,25 +69,60 @@
       		</div>
                   </a>
 
+                  <a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">
       		<div class="nav_options strength">
       			<h3>
       				Strength Training
       			</h3>
       		</div>
+                  </a>
       	</div>
       	<section id="one" class="clearfix">
-      		
-                        
+                  <div class="video clearfix">
+                        <video controls autoplay>
+                        <source src="EricThomas.mp4" type="video/mp4">
+                        <source src="" type="video/ogg">
+                        Your browser does not support HTML5 video.
+                        </video>
+                  </div>
+                  <div class="video_cred">
+                        <h4>
+                              <a href="https://www.youtube.com/channel/UCfKnlcjly06_9OmSNngfing?pbjreload=10">Video courtesy of Joe Tommasino</a>
+                        </h4>
+                  </div>
       	</section>
+
+            <section id="two" class="clearfix">
+                  <div class="philosophy">
+                        <h2>
+                              My training philosophy
+                        </h2>
+                        <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque dignissim enim sit amet venenatis urna. Viverra accumsan in nisl nisi scelerisque. Eget nulla facilisi etiam dignissim diam quis enim lobortis. Quisque non tellus orci ac auctor augue mauris augue. Velit egestas dui id ornare. Blandit cursus risus at ultrices. Morbi quis commodo odio aenean. Sem nulla pharetra diam sit. Nunc non blandit massa enim nec dui. Tortor at risus viverra adipiscing at in. Pharetra vel turpis nunc eget lorem dolor. Egestas diam in arcu cursus euismod quis. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh. Morbi blandit cursus risus at ultrices mi tempus imperdiet nulla. Consectetur a erat nam at lectus urna duis convallis. Libero justo laoreet sit amet cursus sit. In arcu cursus euismod quis viverra nibh cras pulvinar mattis.
+                        </p>
+                        <p>
+                              Ornare lectus sit amet est placerat in egestas erat. Sit amet consectetur adipiscing elit. Quam viverra orci sagittis eu volutpat odio facilisis. Faucibus nisl tincidunt eget nullam non nisi est sit. Quis viverra nibh cras pulvinar mattis nunc sed blandit. Mattis molestie a iaculis at erat. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Auctor urna nunc id cursus metus aliquam eleifend. Ac tortor dignissim convallis aenean et tortor at risus. Consectetur libero id faucibus nisl tincidunt eget. Orci eu lobortis elementum nibh tellus molestie. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Egestas pretium aenean pharetra magna.
+                        </p>
+                        <p>
+                              Tempor commodo ullamcorper a lacus vestibulum sed arcu non odio. Sodales ut eu sem integer. Egestas maecenas pharetra convallis posuere morbi. Eget nunc scelerisque viverra mauris in aliquam sem fringilla ut. Mi eget mauris pharetra et. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Dui accumsan sit amet nulla. Condimentum id venenatis a condimentum. Et odio pellentesque diam volutpat commodo sed. Sem integer vitae justo eget. Iaculis at erat pellentesque adipiscing. Pellentesque elit eget gravida cum sociis natoque. Sapien et ligula ullamcorper malesuada proin libero nunc consequat. Nibh sit amet commodo nulla. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales.
+                        </p>
+                        <p>
+                              Sit amet mauris commodo quis imperdiet. Pellentesque adipiscing commodo elit at. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Mauris augue neque gravida in fermentum et sollicitudin. Habitasse platea dictumst vestibulum rhoncus est. Faucibus turpis in eu mi bibendum neque egestas congue quisque. Enim eu turpis egestas pretium. Nibh sed pulvinar proin gravida hendrerit. Tellus molestie nunc non blandit massa enim. Morbi quis commodo odio aenean sed adipiscing diam donec. Diam vulputate ut pharetra sit amet aliquam. Dui ut ornare lectus sit amet est placerat. Non arcu risus quis varius quam quisque id. Lorem ipsum dolor sit amet consectetur adipiscing. Gravida cum sociis natoque penatibus et magnis.
+                        </p>
+                        <p>
+                              Suspendisse sed nisi lacus sed viverra tellus in hac. Et sollicitudin ac orci phasellus. Porta lorem mollis aliquam ut porttitor. Ultrices gravida dictum fusce ut placerat. Sit amet luctus venenatis lectus magna fringilla. Ullamcorper eget nulla facilisi etiam dignissim diam quis. Maecenas sed enim ut sem viverra aliquet eget sit amet. Erat velit scelerisque in dictum non consectetur a. Feugiat sed lectus vestibulum mattis. Semper viverra nam libero justo laoreet. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc. Mi sit amet mauris commodo quis imperdiet massa tincidunt. Justo eget magna fermentum iaculis eu non diam phasellus. Id eu nisl nunc mi ipsum faucibus.
+                        </p>
+                  </div>
+            </section>
 
       	<section id="ads_left" class="hide_ads_left size">
       		<div class="ads">
-      			<a href="https://www.roguefitness.com/" target="_blank"><img src="img/rogue.png"></a>
+      			<a href="https://www.forged.com/" target="_blank"><img src="img/forged.png"></a>
       		</div>
       	</section>
       	<section id="ads_right" class="hide_ads_right size">
       		<div class="ads">
-      			<a href="https://bruteforcetraining.com/" target="_blank"><img src="img/bruteForce.png"></a>
+      			<a href="https://www.crossfit.com/" target="_blank"><img src="img/crossFit.png"></a>
       		</div>
       	</section>
 
