--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -18,7 +18,7 @@
 	          		<ul>
 	           	   		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html">Strength Training</a></li>
 	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Nutrition</a></li>
-	              		<li><a href="#">Train with a Purpose</a></li>
+	              		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html">Train with a Purpose</a></li>
 	            	</ul>
 	          	</nav>
 	        </header>
@@ -53,20 +53,20 @@
       		</a>
 
       		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">
-
       		<div class="nav_options food">
       			<h3>
       				Nutrition
       			</h3>
       		</div>
-
       		</a>
 
+      		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html">
       		<div class="nav_options train">
       			<h3>
       				Train with a Purpose
       			</h3>
       		</div>
+      		</a>
 
       	</div>
 		
