updated all links to pages

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html
@@ -17,7 +17,7 @@
 	          		<ul>
 	           	   		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_TC.html">Home</a></li>
 	            		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Nutrition.html">Nutrition</a></li>
-	              		<li><a href="#">Train with a Purpose</a></li>
+	              		<li><a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html">Train with a Purpose</a></li>
 	            	</ul>
 	          	</nav>
 	        </header>
@@ -53,6 +53,7 @@
 	      	</div> -->
       	</div>
       	<div id="options" class="clearfix">
+
       		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_TC.html">
       		<div class="nav_options home">
       			<h3>
@@ -69,11 +70,14 @@
       		</div>
                   </a>
 
+                  <a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html">
       		<div class="nav_options train">
       			<h3>
       				Train with a Purpose
       			</h3>
       		</div>
+                  </a>
+                  
       	</div>
       	<section id="one" class="clearfix">
       		<div class="breakfast clearfix food">
