added images and changed media widths

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_Strength.html
@@ -6,6 +6,8 @@
  	<link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans:300,400,700" rel="stylesheet">
  	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 	<link rel="stylesheet" href="css/strength.css">
+      <!-- <link rel="stylesheet/less" type="text/css" href="styles.less" />
+      <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.0.2/less.min.js" ></script> -->
 	<title>Muscle Mechanics Strength Training</title>
 </head>
 <body>
@@ -27,7 +29,7 @@
 	      	<div class="banner show">
 	      		<div class="brand clearfix">
 	      			<div class="brand_img">
-	      				<img src="img/kettleBell.png">
+	      				<img src="img/whiteKettle.png">
 	      			</div>
 	      			<div class="brand_words">
 	      				<h3>
@@ -55,7 +57,7 @@
       	<div id="options" class="clearfix">
 
       		<a href="../Muscle_Mechanics_TC/Muscle_Mechanics_TC.html">
-      		<div class="nav_options home">
+      		<div class="nav_options home left">
       			<h3>
       				Home
       			</h3>
@@ -71,7 +73,7 @@
                   </a>
 
                   <a href="../Muscle_Mechanics_TC/Muscle_Mechanics_Purpose.html">
-      		<div class="nav_options train">
+      		<div class="nav_options train right">
       			<h3>
       				Train with a Purpose
       			</h3>
