added more media perameters

--- a/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
+++ b/Muscle_Mechanics_TC/Muscle_Mechanics_TC.html
@@ -108,19 +108,43 @@
 
 				<div class="Info_slides clearfix">
 					<div class="info_imgs clearfix">
-						<img src="img/mmtc_ogs.png">
-						<img src="img/kettleRings.png">
-						<img src="img/caffeine_kilos.png">
-						<img src="img/drewFam.png">
-						<img src="img/graffiti.png">
-						<img src="img/original_OGs.png">
-						<img src="img/the_crew.png">
-						<img src="img/jumprope.png">
-						<img src="img/rings.png">
-						<img src="img/garage.png">
-						<img src="img/transform.png">
-						<img src="img/box_brothers.png">
-						<img src="img/daughter.png">
+						<div class="photo">
+							<img src="img/mmtc_ogs.png">
+						</div>
+						<div class="photo">
+							<img src="img/kettleRings.png">
+						</div>
+						<div class="photo">
+							<img src="img/caffeine_kilos.png">
+						</div>
+						<div class="photo">
+							<img src="img/drewFam.png">
+						</div>
+						<div class="photo">
+							<img src="img/graffiti.png">
+						</div>
+						<div class="photo">
+							<img src="img/original_OGs.png">
+						</div>
+						<div class="photo">
+							<img src="img/the_crew.png">
+						</div>
+						<div class="photo">
+							<img src="img/jumprope.png">
+						</div>
+						<div class="photo">
+							<img src="img/rings.png">
+						</div>
+						<div class="photo">
+							<img src="img/garage.png">
+						</div>
+						<div class="photo">
+							<img src="img/transform.png">
+						</div>
+						<div class="photo">
+							<img src="img/box_brothers.png">
+						</div>
+						
 					</div>	
 				</div>
 			</div>
